# game_of_life_gui

./: CLAUDE.md  Cargo.toml  Dockerfile.dev  Makefile  README.md  Trunk.toml  compose.yaml  deny.toml  index.html  manifest.json  sw.js
.github/workflows/: ci.yml  deploy.yml
docs/diagrams/: c4-1-context.mmd  c4-2-container.mmd  c4-3-component.mmd  c4-4-code.mmd  step1-grid-storage.mmd  step2-cycle-detection.mmd  step3-rendering-editing.mmd  step4-game-loop.mmd  step5-patterns-postgame.mmd
docs/specs/: PLAN_dev.md  PLAN_initial.md  PLAN_rules.md
src/: app.rs  input.rs  lib.rs  main.rs
src/render/: mod.rs
src/sim/: mod.rs  patterns.rs  session.rs
tests/: sim_tests.rs
